[package]
name = "icr"
version = "0.1.0"
authors = ["Davide Radaelli <daviderady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sph = { path = "sph" }
scene = { path = "scene" }
utils = { path = "utils" }
wgpu = "0.6"
winit = "0.22"
futures = "0.3"
bytemuck = "1.4"
env_logger = "0.7"
cgmath = "0.17"
