[package]
name = "scene"
version = "0.1.0"
authors = ["Davide Radaelli <daviderady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6"
winit = "0.22"
futures = "0.3"
bytemuck = "1.4"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"
